--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,13 +2,14 @@
 
 Ethereum の開発環境
 
-2024/09/25
+2024/10/07
 作成，更新 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
 * [Hardhat プロジェクトの新規作成](#project)
 * [スマートコントラクトの作成とコンパイル](#compile)
-* [Hardhat Network でのコントラクトのテスト](#test)
+* [コントラクトのテスト](#test)
+* [Hardhar Networkへのデプロイ](#hhNetwork)
 * [Sepolia テストネットへのデプロイ](#sepolia)
 
 ##  <a id="setup">環境のセットアップ</a>
@@ -31,6 +32,7 @@ nvm install --lts
 
 ```bash
 brew update
+brew upgrade
 brew install curl git
 source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
@@ -46,8 +48,6 @@ nvm install --lts
 プロジェクトのフォルダを決めます．
 
 ★ このディレクトリを「プロジェクトルート」といいます．
-
-
 
 ```bash
 cd ~
@@ -129,7 +129,7 @@ npm install --save-dev hardhat
 
 初期化コマンド `npx hardhat init` 実行後に
 
-▶ Create an empty hardhat.config.js を選択（キーボードの矢印キーを使って）
+▶ Create a JavaScript project を選択（キーボードの矢印キーを使って）
 
 プロジェクトルートディレクトリに，空の hardhat.config.js ファイルを作成します．
 
@@ -151,12 +151,39 @@ npx hardhat init
 Welcome to Hardhat v2.22.5
 
 ? What do you want to do? … 
-  Create a JavaScript project
+▸ Create a JavaScript project
   Create a TypeScript project
   Create a TypeScript project (with Viem)
-▸ Create an empty hardhat.config.js
+  Create an empty hardhat.config.js
   Quit
 
+=>
+npm install --save-dev "@nomicfoundation/hardhat-toolbox@^5.0.0"
+npm warn deprecated glob@5.0.15: Glob versions prior to v9 are no longer supported
+npm warn deprecated glob@7.1.7: Glob versions prior to v9 are no longer supported
+
+added 300 packages, and audited 570 packages in 44s
+
+95 packages are looking for funding
+  run `npm fund` for details
+
+29 vulnerabilities (26 low, 3 high)
+
+To address issues that do not require attention, run:
+  npm audit fix
+
+Some issues need review, and may require choosing
+a different dependency.
+
+Run `npm audit` for details.
+
+✨ Project created ✨
+
+See the README.md file for some example tasks you can run
+
+Give Hardhat a star on Github if you're enjoying it! ⭐️✨
+
+     https://github.com/NomicFoundation/hardhat
 ```
 
 ### プロジェクトのディレクトリ構成
@@ -168,8 +195,6 @@ ls
 
 hardhat.config.js	node_modules		package-lock.json	package.json
 ```
-
-#### ディレクトリの作成
 
 * contracts ディレクトリ
 
@@ -184,23 +209,12 @@ hardhat.config.js	node_modules		package-lock.json	package.json
 デプロイしたコントラクトを操作するモジュールが格納されます
 
 ```bash
-mkdir contracts
-mkdir test
-mkdir ignition
-mkdir ignition/modules
-```
-
-#### ディレクトリ構成の確認
-
-```bash
- ls
-
+$ ls
+README.md		hardhat.config.js	node_modules		package.json
 contracts		ignition		package-lock.json	test
-hardhat.config.js	node_modules		package.json
 ```
-### Task と Plugin
 
-* Task
+### hardhat のTask 
 
 コンパイルなど Hardhat のコマンドラインから実行する処理のこと
 
@@ -213,35 +227,18 @@ npx hardhat compile
 Nothing to compile
 ```
 
-* plugin
-
-Hardhat はプラグインの集合体として構成されています．
-Hardhatのツールには組み込みのデフォルトのものがありますが，プラグインによって柔軟に別のツールに上書きが可能です．
-
-#### 推奨プラグインのインストール
-
-以下では，推奨プラグインを使って説明します．
-
-hardhat の推奨プラグインのインストールは以下のようにします．
-
-```bash
-npm install --save-dev @nomicfoundation/hardhat-toolbox
-```
-
-####  hardhat.config.js ファイルの修正
+####  hardhat.config.js ファイルの確認
 
 ```bash
 nano hardhat.config.js
 ```
-
-ファイルの１行目にプラグインの require文を追加
 
 ```js
 require("@nomicfoundation/hardhat-toolbox");
 
 /** @type import('hardhat/config').HardhatUserConfig */
 module.exports = {
-  solidity: "0.8.24",
+  solidity: "0.8.27",
 };
 ```
 
@@ -249,12 +246,6 @@ module.exports = {
 
 プロジェクトルートにいることを確認する
 
-```bash
- ls
-
-contracts		ignition		package-lock.json	test
-hardhat.config.js	node_modules		package.json
-```
 
 ### Solidity プログラムの作成
 
@@ -337,7 +328,7 @@ npx hardhat compile
 Compiled 1 Solidity file successfully (evm target: paris).
 ```
 
-## <a id="test">Hardhat Network でのコントラクトのテスト</a>
+## <a id="test"> コントラクトのテスト</a>
 
 コントラクトのテストは ローカルノードである Hardhat Networkで実施します．
 
@@ -355,17 +346,18 @@ Compiled 1 Solidity file successfully (evm target: paris).
 
 ここではテストプログラムを Token.js とします．
 
+
+
+ファイルの内容
+
+これまで chai の説明では Node.js のES6モジュール（commonJSモジュール）として import として読み込んできた．
+しかし，hardhat では，chai を Node.js モジュールとして require で読み込む
+
 * Token.js
 
 ```bash
 nano test/Token.js
 ```
-
-ファイルの内容
-
-hardhat では chaiを Node.js のcommonJSモジュールとして import ではなく require で読み込む
-
-ES6 モジュールかcommonJS モジュールかの区別は package.json で決定される
 
 ```js
 const { expect } = require("chai");
@@ -399,7 +391,7 @@ npx hardhat test
   1 passing (436ms)
 ```
 
-#### テストプログラムの内容の説明
+### テストプログラムの内容の説明
 
 ethers オブジェクトは，ラッピングライブラリ ethers.js を意味します．
 
@@ -432,9 +424,9 @@ const ownerBalance = await hardhatToken.balanceOf(owner.address);
 expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
 ```
 
-### Token.js の修正例
 
-テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテス用のアカウントなどが利用できるようになります．
+
+テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテスト用のアカウントなどが利用できるようになります．
 
 * [Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)  を利用します
 
@@ -609,9 +601,25 @@ describe("トークンのコントラクト", function () {
 npx hardhat test 
 
 =>
-トークンのコントラクト
+  Lock
+    Deployment
+      ✔ Should set the right unlockTime (374ms)
+      ✔ Should set the right owner
+      ✔ Should receive and store the funds to lock
+      ✔ Should fail if the unlockTime is not in the future
+    Withdrawals
+      Validations
+        ✔ Should revert with the right error if called too soon
+        ✔ Should revert with the right error if called from another account
+        ✔ Shouldn't fail if the unlockTime has arrived and the owner calls it
+      Events
+        ✔ Should emit an event on withdrawals
+      Transfers
+        ✔ Should transfer the funds to the owner
+
+  トークンのコントラクト
     デプロイ
-      ✔ 正しいオーナーが設定されていること (345ms)
+      ✔ 正しいオーナーが設定されていること
       ✔ トークンの総量がオーナーに割り当てられること
     トランザクション
       ✔ アカウント間でトークンが転送されること
@@ -619,14 +627,13 @@ npx hardhat test
       ✔ 送金者が十分なトークンを所持していないときに失敗すること
 
 
-  5 passing (383ms)
+  14 passing (425ms)
 
 ```
 
-### Solidityの console.log 
+### Solidityの console.log でコンソールにログを表示する
 
-
-#### Token.js の修正版
+#### Token.js の修正
 
 contracts ディレクトリに移動して修正
 
@@ -731,6 +738,9 @@ transfer  0x70997970c51812dc3a010c7d01b50e0d17dc79c8 to 0x3c44cdddb6a900fa2b585d
 
 ```
 
+## <a id="hhNetwork"> Hardhar Networkへのデプロイ</a>
+
+
 ### Hardhat Network の利用
 
 * ここから新しく別のターミナルを開く
@@ -763,6 +773,28 @@ Any funds sent to them on Mainnet or any other live network WILL BE LOST.
 
 ```
 
+### hardhat設定ファイル hardhat.config.js の修正
+
+```bash
+nano hardhat.config.js
+```
+
+```js
+// hardhat.config.js
+require("@nomicfoundation/hardhat-toolbox");
+
+/** @type import('hardhat/config').HardhatUserConfig */
+module.exports = {
+  solidity: "0.8.27",
+  networks: {
+    hardhat: {
+      chainId: 31337,
+    },
+  },
+};
+
+```
+
 ### メタマスクの利用
 
 有名なethrerum ワレットです
@@ -784,18 +816,107 @@ Any funds sent to them on Mainnet or any other live network WILL BE LOST.
 
 で「保存」をクリックしてネットワークに接続します
 
+
+
+### hardhat でコントラクトをデプロイする場合
+
+* プロジェクトルートの下の scripts フォルダにデプロイスクリプトを生成
+* デプロイスクリプトファイルを作成する (deploy.js)
+
 ```bash
-eth_chainId
-eth_chainId (4)
-eth_blockNumber
-eth_getBalance (6)
-eth_getBlockByNumber
-net_version (2)
-eth_blockNumber (3)
+mkdir scripts
+nano scripts/deploy.js
+```
+
+```js
+const hre = require("hardhat");
+
+async function main() {
+   const deployedContract = await hre.ethers.deployContract("Token");
+   await deployedContract.waitForDeployment();
+}
+
+main().catch((error) => {
+   console.error(error);
+   process.exitCode = 1;
+});
 
 ```
 
-## Hardhat Ignition
+### hardhat ネットワークへのデプロイ
+
+```bash
+npx hardhat run scripts/deploy.js --network localhost
+```
+
+コンソール側のターミナルで確認
+
+```bash
+eth_blockNumber
+net_version (2)
+eth_getBlockByNumber
+eth_blockNumber
+eth_getBalance (7)
+eth_blockNumber (4)
+eth_chainId (2)
+eth_blockNumber (51)
+eth_accounts
+hardhat_metadata (20)
+eth_blockNumber
+eth_getBlockByNumber
+eth_feeHistory
+eth_maxPriorityFeePerGas
+eth_sendTransaction
+  Contract deployment: Token
+  Contract address:    0x5fbdb2315678afecb367f032d93f642f64180aa3
+  Transaction:         0x0281202f3c48df83b0ddb1e76125f0e11dc7453b143423b849e18bde6e60e389
+  From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+  Value:               0 ETH
+  Gas used:            712681 of 30000000
+  Block #1:            0x313780e83fdd73b03f9609706176d2c91e6a5f90c373af6277903ed69a9ad19d
+```
+
+
+
+## ethers.js を使ったコントラクトのデプロイ
+
+### コントラクトのデプロイ処理の内容
+
+1. コンパイル済のバイトコードを null アドレスに送信する
+2. コンストラクタに引数がある場合は，ABIで引数をエンコードしてバイトコードの末尾に追加する
+
+* ethers.js の ContractFactory 関数
+
+デプロイするコントラクトのバイトコードをまとめたオブジェクトを生成する関数
+
+```js
+const contractFactory = new ethers.ContractFactory(abi, bytecode, signer);
+```
+
+*  ethers.js の deploy関数
+
+コントラクトのバイトコードを実際にデプロイする関数
+
+```js
+const contract = await contractFactory.deploy(args);
+```
+
+*  ethers.js の waitForDeployment関数
+
+実際に生成されたコントラクトアカウントの情報を取得する関数
+
+```js
+await contract.waitForDeployment();
+```
+
+例えば contract.address で生成されたコントラクトのアドレスを取得できる
+
+```js
+console.log("コントラクトアドレス：", contract.address);
+```
+
+
+## Hardhat Ignition によるコントラクトのデプロイ
 
 hardhat ignition はスマートコントラクトをデプロイするためのシステムです．
 
@@ -842,7 +963,7 @@ module.exports = TokenModule;
 
 ```
 
-##  <a id="hardhatnet">Hardhat Network へのデプロイ</a>
+## Hardhat の ignitionコマンドによる Hardhat Network へのデプロイ
 
 hardhat の ignition コマンドでデプロイすることができます．
 
