--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -27,6 +27,11 @@ source ~/.profile
 
 nvm install --lts
 ```
+* VS code のインストール
+
+```bash
+sudo snap install --classic code
+```
 
 ### MacOSX
 
@@ -41,6 +46,10 @@ source ~/.zprofile
 nvm install --lts
 ```
 
+* VS code のインストール
+
+[https://code.visualstudio.com/download](https://code.visualstudio.com/download) からインストーラーをダウンロード
+
 ## <a id="project">Hardhat プロジェクトの新規作成</a>
 
 ### プロジェクトフォルダの作成
@@ -53,14 +62,12 @@ nvm install --lts
 cd ~
 mkdir hardhat
 cd hardhat/
-```
-
-* ここでは，プロジェクトルートを hardhat-tutorial という名前のフォルダにしますが，適宜自分のプロジェクト名に修正してください
-
-```bash
 mkdir tutorial
 cd tutorial
 ```
+
+* ここでは，プロジェクトルートを hardhat/tutolial という名前のフォルダにしますが，適宜自分のプロジェクト名に修正してください
+
 
 以下では，npm 7 を利用します．
 
@@ -117,7 +124,7 @@ Is this OK? (yes)
 
 ### Hardhat パッケージモジュールのインストール
 
-hardhat は，javaScriptのパッケージモジュールです．
+hardhat は,javaScriptのパッケージモジュールです.
 
 ★  --save-dev というオプションは，このプロジェクトだけのローカルな環境にモジュールをインストールするという意味です．
 
@@ -193,7 +200,9 @@ hardhat プロジェクトのディレクトリは以下のような構成にな
 ```bash
 ls
 
-hardhat.config.js	node_modules		package-lock.json	package.json
+README.md		contracts		node_modules		scripts
+artifacts		hardhat.config.js	package-lock.json	test
+cache			ignition		package.json
 ```
 
 * contracts ディレクトリ
@@ -208,12 +217,16 @@ hardhat.config.js	node_modules		package-lock.json	package.json
 
 デプロイしたコントラクトを操作するモジュールが格納されます
 
-```bash
-$ ls
-README.md		hardhat.config.js	node_modules		package.json
-contracts		ignition		package-lock.json	test
-```
+### 余計なファイルの削除
 
+hardhat はサンプルのスマートコントラクトとテストプログラムを生成してくれます．
+
+しかし，ここでは余計なので削除してしまいます
+
+```bash
+rm contracts/Lock.sol
+rm test/Lock.js
+```
 ### hardhat のTask 
 
 コンパイルなど Hardhat のコマンドラインから実行する処理のこと
@@ -246,12 +259,11 @@ module.exports = {
 
 プロジェクトルートにいることを確認する
 
-
 ### Solidity プログラムの作成
 
 contractディレクトリの下に Solidity言語のプログラムのファイルを作成します．
 
-ここでは，Token.sol というファイル名にします.
+ここでは, Token.sol というファイル名にします.
 
 Solidityプログラムのソースコードには .sol という拡張子をつけます．
 
@@ -424,8 +436,6 @@ const ownerBalance = await hardhatToken.balanceOf(owner.address);
 expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
 ```
 
-
-
 テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテスト用のアカウントなどが利用できるようになります．
 
 * [Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)  を利用します
@@ -496,247 +506,6 @@ npx hardhat test
   2 passing (446ms)
 ```
 
-#### フルテストの例
-
-さらにイベントの通知や送金の失敗などコントラクトの全ロジックを確認する
-
-* Token.js
-
-```bash
-nano test/Token.js
-```
-
-```js
-const { expect } = require("chai");
-const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
-
-describe("トークンのコントラクト", function () {
-  async function deployTokenFixture() {
-    // 署名者
-    const [owner, addr1, addr2] = await ethers.getSigners();
-    // Token コントラクトのデプロイ
-    const hardhatToken = await ethers.deployContract("Token");
-    await hardhatToken.waitForDeployment();
-    // Token コントラクトオブジェクトと署名者
-    return { hardhatToken, owner, addr1, addr2 };
-  }
-
-  // You can nest describe calls to create subsections.
-  describe("デプロイ", function () {
-    it("正しいオーナーが設定されていること", async function () {
-      // コントラクトオブジェクトとオーナー
-      const { hardhatToken, owner } = await loadFixture(deployTokenFixture);
-      // コントラクトのオーナーがオーナーであること
-      expect(await hardhatToken.owner()).to.equal(owner.address);
-    });
-
-    it("トークンの総量がオーナーに割り当てられること", async function () {
-      // コントラクトオブジェクトとオーナー
-      const { hardhatToken, owner } = await loadFixture(deployTokenFixture);
-      // オーナーの所持金
-      const ownerBalance = await hardhatToken.balanceOf(owner.address);
-      // トークンの総量がオーナーの所持金に等しい
-      expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
-    });
-  });
-
-  describe("トランザクション", function () {
-    it("アカウント間でトークンが転送されること", async function () {
-      // コントラクトオブジェクト，オーナー，addr1, addr2
-      const { hardhatToken, owner, addr1, addr2 } = await loadFixture(
-        deployTokenFixture
-      );
-      // オーナーからaddr1 に50トークン送金する
-      await expect(
-        hardhatToken.transfer(addr1.address, 50)
-      ).to.changeTokenBalances(hardhatToken, [owner, addr1], [-50, 50]);
-      // add1 から addr2 に50トークン送金する
-      // その結果，addr1 の残高が-50 addr2 の残高が +50 に変化する
-      await expect(
-        hardhatToken.connect(addr1).transfer(addr2.address, 50)
-      ).to.changeTokenBalances(hardhatToken, [addr1, addr2], [-50, 50]);
-    });
-
-    it("転送イベントが発出されること", async function () {
-      // コントラクトオブジェクト，オーナー，addr1 addr2
-      const { hardhatToken, owner, addr1, addr2 } = await loadFixture(
-        deployTokenFixture
-      );
-
-      // オーナーからaddr1 に50トークン送金する
-      await expect(hardhatToken.transfer(addr1.address, 50))
-        .to.emit(hardhatToken, "Transfer")
-        .withArgs(owner.address, addr1.address, 50);
-
-      // addr1 から addr2 に 50トークン送金する
-      // We use .connect(signer) to send a transaction from another account
-      await expect(hardhatToken.connect(addr1).transfer(addr2.address, 50))
-        .to.emit(hardhatToken, "Transfer")
-        .withArgs(addr1.address, addr2.address, 50);
-    });
-
-    it("送金者が十分なトークンを所持していないときに失敗すること", async function () {
-      const { hardhatToken, owner, addr1 } = await loadFixture(
-        deployTokenFixture
-      );
-      const initialOwnerBalance = await hardhatToken.balanceOf(owner.address);
-
-      // addr1（所持金0） からオーナーに 1 トークン送金しようとする
-      // `require` will evaluate false and revert the transaction.
-      await expect(
-        hardhatToken.connect(addr1).transfer(owner.address, 1)
-      ).to.be.revertedWith("Not enough tokens");
-
-      // オーナーの残高は変わっていない
-      expect(await hardhatToken.balanceOf(owner.address)).to.equal(
-        initialOwnerBalance
-      );
-    });
-  });
-});
-
-```
-
-```bash
-npx hardhat test 
-
-=>
-  Lock
-    Deployment
-      ✔ Should set the right unlockTime (374ms)
-      ✔ Should set the right owner
-      ✔ Should receive and store the funds to lock
-      ✔ Should fail if the unlockTime is not in the future
-    Withdrawals
-      Validations
-        ✔ Should revert with the right error if called too soon
-        ✔ Should revert with the right error if called from another account
-        ✔ Shouldn't fail if the unlockTime has arrived and the owner calls it
-      Events
-        ✔ Should emit an event on withdrawals
-      Transfers
-        ✔ Should transfer the funds to the owner
-
-  トークンのコントラクト
-    デプロイ
-      ✔ 正しいオーナーが設定されていること
-      ✔ トークンの総量がオーナーに割り当てられること
-    トランザクション
-      ✔ アカウント間でトークンが転送されること
-      ✔ 転送イベントが発出されること
-      ✔ 送金者が十分なトークンを所持していないときに失敗すること
-
-
-  14 passing (425ms)
-
-```
-
-### Solidityの console.log でコンソールにログを表示する
-
-#### Token.js の修正
-
-contracts ディレクトリに移動して修正
-
-```bash
-nano contracts/Token.sol
-```
-
-```js
-//SPDX-License-Identifier: UNLICENSED
-pragma solidity ^0.8.0;
-import "hardhat/console.sol";
-
-contract Token {
-    // トークンのタイプとシンボル名
-    string public name = "Kindai Token";
-    string public symbol = "KT";
-
-    // トークンの総量
-    uint256 public totalSupply = 1000000;
-
-    // オーナーのアドレス
-    address public owner;
-
-    // アカウントごとのトークンの所持金を管理するマップ
-    mapping(address => uint256) balances;
-
-    // チェーンの外部にこのコントラクトの状況を伝えるためのイベント
-    event Transfer(address indexed _from, address indexed _to, uint256 _value);
-
-    /**
-     * コントラクトの初期化
-     */
-    constructor() {
-        // トークンの総量がこのコントラクトをデプロイするトランザクションの送信者に割り当てられる
-        balances[msg.sender] = totalSupply;
-        // コントラクトをデプロイしたアカウントをオーナーにする
-        owner = msg.sender;
-    }
-
-    /**
-     * トークンを送金する関数
-     */
-    function transfer(address to, uint256 amount) external {
-        // トランザクションの送金者が十分な所持金を持っていることをチェックする
-        // 不十分なら失敗する
-        require(balances[msg.sender] >= amount, "Not enough tokens");
-    // コンソールにログを表示する
-    console.log(
-        "transfer  %s to %s %s tokens",
-        msg.sender,
-        to,
-        amount
-    );
-
-        //指定金額を送金する（送金者の残高を減額し受領者の残高を増やす）
-        balances[msg.sender] -= amount;
-        balances[to] += amount;
-
-        // イベントを外部に通知する
-        emit Transfer(msg.sender, to, amount);
-    }
-
-    /**
-     * 指定したアカウントの残高を表示する読み出し専用関数
-     *
-     * The `view` modifier は，コントラクトの状態更新を行わないことを意味する
-     */
-    function balanceOf(address account) external view returns (uint256) {
-        return balances[account];
-    }
-}
-```
-
-#### コンパイル
-
-```bash
-npx hardhat compile
-```
-
-テストの実行とコンソールメッセージの確認
-
-```bash
-npx hardhat test
-
-
-  トークンのコントラクト
-    デプロイ
-      ✔ 正しいオーナーが設定されていること (422ms)
-      ✔ トークンの総量がオーナーに割り当てられること
-    トランザクション
-transfer  0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 to 0x70997970c51812dc3a010c7d01b50e0d17dc79c8 50 tokens
-transfer  0x70997970c51812dc3a010c7d01b50e0d17dc79c8 to 0x3c44cdddb6a900fa2b585dd299e03d12fa4293bc 50 tokens
-      ✔ アカウント間でトークンが転送されること
-transfer  0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 to 0x70997970c51812dc3a010c7d01b50e0d17dc79c8 50 tokens
-transfer  0x70997970c51812dc3a010c7d01b50e0d17dc79c8 to 0x3c44cdddb6a900fa2b585dd299e03d12fa4293bc 50 tokens
-      ✔ 転送イベントが発出されること
-      ✔ 送金者が十分なトークンを所持していないときに失敗すること
-
-
-  5 passing (454ms)
-
-
-```
 
 ## <a id="hhNetwork"> Hardhar Networkへのデプロイ</a>
 
