--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -22,7 +22,7 @@ Ethereum の開発環境
 ```bash
 sudo apt update
 sudo apt install curl git
-curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
+curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
 
 nvm install --lts
@@ -68,8 +68,14 @@ cd tutorial
 
 * ここでは，プロジェクトルートを hardhat/tutolial という名前のフォルダにしますが，適宜自分のプロジェクト名に修正してください
 
+### VS codeを利用する場合
 
-以下では，npm 7 を利用します．
+拡張機能のインストール
+
+* Japanese Language Pack for Visual Studio Code
+* Hardhat Developer Pack
+
+プロジェクトルートのディレクトリをVS code から指定
 
 ### JavaScript プロジェクトの作成
 
@@ -200,8 +206,7 @@ hardhat プロジェクトのディレクトリは以下のような構成にな
 ```bash
 ls
 
-README.md		contracts		node_modules		scripts
-artifacts		hardhat.config.js	package-lock.json	test
+README.md		contracts		node_modules	hardhat.config.js	package-lock.json	test
 cache			ignition		package.json
 ```
 
@@ -277,7 +282,7 @@ nano contracts/Token.sol
 ファイルの内容
 
 ```js
-//SPDX-License-Identifier: UNLICENSED
+//SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
 // スマートコントラクトの定義
@@ -645,8 +650,6 @@ eth_sendTransaction
   Block #1:            0x313780e83fdd73b03f9609706176d2c91e6a5f90c373af6277903ed69a9ad19d
 ```
 
-
-
 ## ethers.js を使ったコントラクトのデプロイ
 
 ### コントラクトのデプロイ処理の内容
@@ -762,43 +765,6 @@ TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 `0x5FbDB2315678afecb367f032d93F642f64180aa3` です
 
 
-## <a id="sepolia">Sepolia テストネットへのデプロイ</a>
-
-infula を利用して Sepolia テストネットにデプロイする方法を説明します．
-mainnet へのデプロイも基本的に同様の方法で実施できます．
-
-### Hardhat とネットワークの接続方法
-
-プロジェクトルートから，
-以下のようにネットワーク名を指定して ignition のデプロイを実行します
-
-```bash
-npx hardhat ignition deploy ./ignition/modules/Token.js --network <ネットワーク名>
-```
-
-プロジェクトルートに移動して，ネットワーク名を指定せずにテストとしてデプロイコマンドを実行して，エラーがないことを確認する．
-
-```bash
-npx hardhat ignition deploy ./ignition/modules/Token.js --network localhost 
-
-=>
-You are running Hardhat Ignition against an in-process instance of Hardhat Network.
-This will execute the deployment, but the results will be lost.
-You can use --network <network-name> to deploy to a different network.
-
-Hardhat Ignition 🚀
-
-Deploying [ TokenModule ]
-
-Batch #1
-  Executed TokenModule#Token
-
-[ TokenModule ] successfully deployed 🚀
-
-Deployed Addresses
-
-TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
-```
 
 ### hardhat network の停止
 
@@ -812,94 +778,3 @@ npm i kill-port -g
 ```bash
 kill-port 8545
 ```
-
-### Sepolia テストネットワークへのデプロイの事前準備
-
-* infula のアカウントを作成
-* infula のAPIキーを取得:
-  * INFURA_API_KEY
-* Sepolia テストネットでアカウントに foucet から資金を得ておく
-（ethereum mainnet の資金が必要なので，山崎に要求してください）
-* Sepolia で資金を所有するアカウントの秘密鍵を確認する: 
-  * SEPOLIA_PRIVATE_KEY
-
-
-### 設定変数へのキーの登録
-
-```bash
-npx hardhat vars set INFURA_API_KEY
-
-=>
-✔ Enter value: · ********************************
-The configuration variable has been stored in /home/yamasaki/.config/hardhat-nodejs/vars.json
-```
-
-```bash
-npx hardhat vars set SEPOLIA_PRIVATE_KEY
-
-=>
-✔ Enter value: · ****************************************************************
-The configuration variable has been stored in /home/yamasaki/.config/hardhat-nodejs/vars.json
-
-```
-
-### 設定ファイルの修正
-
-プロジェクトルートの `hardhat.config.js` を修正
-
-
-```bash
-nano hardhat.config.js
-```
-
-```js
-require("@nomicfoundation/hardhat-toolbox");
-
-// 設定変数はスクリプト実行前に設定される
-const { vars } = require("hardhat/config");
-
-// Go to https://infura.io, sign up, create a new API key
-// in its dashboard, and add it to the configuration variables
-const INFURA_API_KEY = vars.get("INFURA_API_KEY");
-
-// Add your Sepolia account private key to the configuration variables
-// To export your private key from Coinbase Wallet, go to
-// Settings > Developer Settings > Show private key
-// To export your private key from Metamask, open Metamask and
-// go to Account Details > Export Private Key
-// Beware: NEVER put real Ether into testing accounts
-const SEPOLIA_PRIVATE_KEY = vars.get("SEPOLIA_PRIVATE_KEY");
-
-module.exports = {
-  solidity: "0.8.24",
-  networks: {
-    sepolia: {
-      url: `https://sepolia.infura.io/v3/${INFURA_API_KEY}`,
-      accounts: [SEPOLIA_PRIVATE_KEY],
-    },
-  },
-};
-```
-
-### Sepoliaへのデプロイ
-
-```bash
-npx hardhat ignition deploy ./ignition/modules/Token.js --network sepolia
-
-=>
-✔ Confirm deploy to network sepolia (11155111)? … yes
-Hardhat Ignition 🚀
-
-Deploying [ TokenModule ]
-
-Batch #1
-  Executed TokenModule#Token
-
-[ TokenModule ] successfully deployed 🚀
-
-Deployed Addresses
-
-TokenModule#Token - 0x2E911f3975D1c08aF0DF1cC64EDf2267701626b0
-
-```
-
