--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -21,6 +21,7 @@ Ethereum の開発環境
 
 ```bash
 sudo apt update
+sudo apt upgrade -y
 sudo apt install curl git
 curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
@@ -589,8 +590,6 @@ module.exports = {
 * 通貨記号： ETH
 
 で「保存」をクリックしてネットワークに接続します
-
-
 
 ### hardhat でコントラクトをデプロイする場合
 
