--- a/ethereum/3. ethers.js.md
+++ b/ethereum/3. ethers.js.md
@@ -392,3 +392,119 @@ Uint8Array(6) [ 115, 101, 99, 114, 101, 116 ]
 `new ethers.ContractFactory( interface , bytecode [ , signer ] )`
 
 * 
+
+
+## ethers.js を使ったコントラクトのデプロイ
+
+### コントラクトのデプロイ処理の内容
+
+1. コンパイル済のバイトコードを null アドレスに送信する
+2. コンストラクタに引数がある場合は，ABIで引数をエンコードしてバイトコードの末尾に追加する
+
+* ethers.js の ContractFactory 関数
+
+デプロイするコントラクトのバイトコードをまとめたオブジェクトを生成する関数
+
+```js
+const contractFactory = new ethers.ContractFactory(abi, bytecode, signer);
+```
+
+*  ethers.js の deploy関数
+
+コントラクトのバイトコードを実際にデプロイする関数
+
+```js
+const contract = await contractFactory.deploy(args);
+```
+
+*  ethers.js の waitForDeployment関数
+
+実際に生成されたコントラクトアカウントの情報を取得する関数
+
+```js
+await contract.waitForDeployment();
+```
+
+例えば contract.address で生成されたコントラクトのアドレスを取得できる
+
+```js
+console.log("コントラクトアドレス：", contract.address);
+```
+
+
+## Hardhat Ignition によるコントラクトのデプロイ
+
+hardhat ignition はスマートコントラクトをデプロイするためのシステムです．
+
+実際のデプロイ処理は，Ignition モジュールを使って定義されます．
+
+### hardhat Ignition モジュール
+
+javaScriptのモジュール機能に似た概念で，スマートコントラクトの関数や値などをカプセル化して外部に公開します．
+
+Ignitionモージュールは，デプロイを支援するJavaScript 関数です．
+
+#### hardhat-ignition-ethers プラグインのインストール
+
+プロジェクトルートで実行
+
+```bash
+npm install --save-dev @nomicfoundation/hardhat-ignition-ethers
+```
+
+### hardhat Ignition モジュールの作成
+
+`./ignition/modules` ディレクトリに以下の `Token.js` ファイルを作成します．
+
+```bash
+nano ignition/modules/Token.js
+```
+
+```js
+// hardhat ignition プラグインを有効化する
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
+// buildModule関数でモジュールを作成する
+//  第１引数がモジュールの識別名
+//  引数のコールバック関数がモジュール定義の実際の内容
+//   コールバック関数のmはModuleBuilderのインスタンス
+//     
+const TokenModule = buildModule("TokenModule", (m) => {
+  const token = m.contract("Token");
+
+  return { token };
+});
+
+module.exports = TokenModule;
+
+```
+
+## Hardhat の ignitionコマンドによる Hardhat Network へのデプロイ
+
+hardhat の ignition コマンドでデプロイすることができます．
+
+デプロイした結果，デプロイしたスマートコントラクトのコントラクトアカウントのアドレスが返ってきます
+
+```bash
+ npx hardhat ignition deploy ./ignition/modules/Token.js --network localhost
+
+=>
+
+Hardhat Ignition 🚀
+
+Deploying [ TokenModule ]
+
+Batch #1
+  Executed TokenModule#Token
+
+[ TokenModule ] successfully deployed 🚀
+
+Deployed Addresses
+
+TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
+```
+
+上記の場合，Token コントラクトのアカウントのアドレスは
+
+`0x5FbDB2315678afecb367f032d93F642f64180aa3` です
+
