--- a/ethereum/1. Hardhat.md
+++ b/ethereum/1. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/10/08
+2024/10/14
 作成，更新 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -27,11 +27,22 @@ curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
 
 nvm install --lts
+
+node -v
+
+=>
+v20.18.0
 ```
 * VS code のインストール
 
 ```bash
 sudo snap install --classic code
+```
+
+* tree コマンドのインストール
+
+```bash
+sudo apt install tree
 ```
 
 ### MacOSX
@@ -45,6 +56,11 @@ echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
 nvm install --lts
+
+node -v
+
+=>
+v20.18.0
 ```
 
 * VS code のインストール
@@ -95,6 +111,11 @@ npm init
 ...
 
 Is this OK? (yes) 
+npm notice
+npm notice New minor version of npm available! 10.8.2 -> 10.9.0
+npm notice Changelog: https://github.com/npm/cli/releases/tag/v10.9.0
+npm notice To update run: npm install -g npm@10.9.0
+npm notice
 ```
 
 ### Hardhat パッケージモジュールのインストール
@@ -149,25 +170,29 @@ hardhat プロジェクトのディレクトリは以下のような構成にな
 ```bash
 ls
 
-README.md		contracts		node_modules	hardhat.config.js	package-lock.json	test
-cache			ignition		package.json
+=>
+README.md  contracts  hardhat.config.js  ignition  node_modules  package-lock.json  package.json  test
 ```
 
-* contracts ディレクトリ
+```
+tree -L 1
+.
+├── README.md
+├── artifacts		← コンパイル結果
+├── cache
+├── contracts		← solidity のソースコード
+├── hardhat.config.js	← 設定ファイル
+├── ignition
+├── node_modules
+├── package-lock.json
+├── package.json
+└── test			← テストプログラム
 
-ここに solidity言語のスマートコントラクトのファイルを作成します．
-
-* test ディレクトリ
-
-ここにテストプログラムを作成します．
-
-*  ignition ディレクトリ
-
-デプロイしたコントラクトを操作するモジュールが格納されます
+```
 
 ### 余計なファイルの削除
 
-hardhat はサンプルのスマートコントラクトとテストプログラムを生成してくれます．
+hardhat は Lock という名前のサンプルのスマートコントラクトとテストプログラムを生成してくれます．
 
 しかし，ここでは余計なので削除してしまいます
 
@@ -190,9 +215,12 @@ Nothing to compile
 
 ####  hardhat.config.js ファイルの確認
 
+* nano エディタでファイルを開く
+
 ```bash
 nano hardhat.config.js
 ```
+* ファイルの内容
 
 ```js
 require("@nomicfoundation/hardhat-toolbox");
@@ -203,21 +231,22 @@ module.exports = {
 };
 ```
 
+* キーボード： `<ctrl¥> -x` でnano エディタを終了
+
 ## <a id="compile">スマートコントラクトの作成とコンパイル</a>
 
-プロジェクトルートにいることを確認する
+* プロジェクトルート・ディレクトリにいることを確認する
 
 ### Solidity プログラムの作成
 
-contractディレクトリの下に Solidity言語のプログラムのファイルを作成します．
+* contractディレクトリの下に Solidity言語のプログラムのファイルを作成します．
+* ここでは, Token.sol というファイル名にします.
+* Solidityプログラムのソースコードには .sol という拡張子をつけます．
 
-ここでは, Token.sol というファイル名にします.
+#### プログラムの内容
 
-Solidityプログラムのソースコードには .sol という拡張子をつけます．
-
-* Token.sol
-
-このプロクラムはマップデータとしてトークンを生成し，マップの更新によってアカウント間でトークンの送金を行うものです
+* マップデータとしてトークンを生成し
+* マップの更新によってアカウント間でトークンの送金を行う
 
 ```bash
 nano contracts/Token.sol
@@ -279,6 +308,9 @@ contract Token {
 }
 ```
 
+* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
+* キーボード：`<ctrl x>` で nano エディタ終了
+
 ### コントラクトのコンパイル
 
 ```bash
@@ -288,32 +320,147 @@ npx hardhat compile
 Compiled 1 Solidity file successfully (evm target: paris).
 ```
 
+### コンパイル結果の確認
+
+
+#### artifacts ディレクトリ
+
+* コンパイル結果はartifacts ディレクトリに格納されます
+
+artifacts ディレクトリ以下を3階層まで木構造表示させる
+
+```bash
+ tree artifacts -L 3 
+
+=>
+.
+├── build-info
+│   └── 94c0b958419f077d841398267624fa75.json
+└── contracts
+    └── Token.sol
+        ├── Token.dbg.json
+        └── Token.json
+
+4 directories, 3 files
+```
+
+
+#### コンパイル結果のファイル
+
+artifacts/contracts の下にある `'コントラクト名.sol` ディレクトリの下の `コントラクト名.json` にJSON形式になったコンパイル結果があります．
+
+```bash
+cat artifacts/contracts/Token.sol/Token.json
+
+=>
+{
+  "_format": "hh-sol-artifact-1",
+  "contractName": "Token",
+  "sourceName": "contracts/Token.sol",
+  "abi": [
+    {
+      "inputs": [],
+      "stateMutability": "nonpayable",
+      "type": "constructor"
+    },
+
+...
+
+```
+
+#### コンパイル結果からのABI の取得
+
+* コンパイル結果の JSON 形式にはABIの情報とコンパイル結果のバイトコードが含まれています．
+* hardhat の built-in method readArtifact を利用してこれを取得できます
+
+node.js から hardhat メソッドを使ってABI情報を取得する
+
+```bash
+node
+
+=>
+Welcome to Node.js v20.18.0.
+Type ".help" for more information.
+```
+
+コントラクト名が 'Token' のとき
+
+```js
+> const hre = require('hardhat')
+undefined
+> const myContractArtifact = await hre.artifacts.readArtifact('Token')
+undefined
+> const {bytecode, abi} = myContractArtifact;
+undefined
+
+// abi の確認
+> abi
+[
+  { inputs: [], stateMutability: 'nonpayable', type: 'constructor' },
+  {
+    anonymous: false,
+    inputs: [ [Object], [Object], [Object] ],
+    name: 'Transfer',
+    type: 'event'
+  },
+  {
+    inputs: [ [Object] ],
+    name: 'balanceOf',
+    outputs: [ [Object] ],
+    stateMutability: 'view',
+    type: 'function'
+  },
+  {
+    inputs: [],
+    name: 'name',
+    outputs: [ [Object] ],
+    stateMutability: 'view',
+    type: 'function'
+  },
+  {
+    inputs: [],
+    name: 'owner',
+    outputs: [ [Object] ],
+    stateMutability: 'view',
+    type: 'function'
+  },
+  {
+    inputs: [],
+    name: 'symbol',
+    outputs: [ [Object] ],
+    stateMutability: 'view',
+    type: 'function'
+  },
+  {
+    inputs: [],
+    name: 'totalSupply',
+    outputs: [ [Object] ],
+    stateMutability: 'view',
+    type: 'function'
+  },
+  {
+    inputs: [ [Object], [Object] ],
+    name: 'transfer',
+    outputs: [],
+    stateMutability: 'nonpayable',
+    type: 'function'
+  }
+]
+> 
+```
+
 ## <a id="test"> コントラクトのテスト</a>
 
-コントラクトのテストは ローカルノードである Hardhat Networkで実施します．
+* コントラクトのテストは ローカルノードである Hardhat Networkで実施します．
+* コントラクトの操作は，ethere.js を利用します
+* テスト実行は JavaScript のテストフレームワーク Chai と Mocha を利用します．
 
-コントラクトの操作は，ethere.js を利用します
+### テストプログラムの作成
 
-テスト実行は Mocha を利用します．
+* プロジェクトルートの下に test ディレクトリにテストプログラムを作成します
+* ★ hardhat では，chai を ES6モジュール（commonJSモジュール）ではなく Node.js モジュールとして require で読み込むことに注意してください
 
-### テストの作成
-
-プロジェクトルートの下に test ディレクトリにテストを作成します
-
-#### JavaScript のテストフレームワーク Chai を利用する
-
-また，ethereumのラッピングライブラリの [ethers.js](https://docs.ethers.org/v6/) を利用して ethereumへの操作を行います
-
-ここではテストプログラムを Token.js とします．
-
-
-
-ファイルの内容
-
-これまで chai の説明では Node.js のES6モジュール（commonJSモジュール）として import として読み込んできた．
-しかし，hardhat では，chai を Node.js モジュールとして require で読み込む
-
-* Token.js
+* Token.js 
 
 ```bash
 nano test/Token.js
@@ -336,9 +483,12 @@ describe("トークンのコントラクト", function () {
 });
 ```
 
+* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
+* キーボード：`<ctrl x>` で nano エディタ終了
+
 ### テストの実行
 
-プロジェクトルートで実行
+* プロジェクトルートから hardhat のテストタスクを実行します
 
 ```bash
 npx hardhat test
@@ -353,41 +503,34 @@ npx hardhat test
 
 ### テストプログラムの内容の説明
 
-ethers オブジェクトは，ラッピングライブラリ ethers.js を意味します．
-
-ethers.getSigners() は，トランザクション送信者（署名者）のEthereumアカウントを返すメソッドです．
+* ethers オブジェクトは，ラッピングライブラリ ethers.js を意味します．
+* ethers.getSigners() は，トランザクション送信者（署名者）のEthereumアカウントを返すメソッドです．
 
 ```js
 const [owner] = await ethers.getSigners();
 ```
-
-ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッドです．
-
-デプロイが完了すると hardhatToken というコントラクトのオブジェクトが利用可能になります．
+* ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッドです．
+* デプロイが完了すると hardhatToken というコントラクトのオブジェクトが利用可能になります．
 
 ```js
 const hardhatToken = await ethers.deployContract("Token");
 ```
-
-
-コントラクトオブジェクト hardhatTokenに対して balanceOf メソッドを使うと Owner の所持金を確認することができます．
+* コントラクトオブジェクト hardhatTokenに対して balanceOf メソッドを使うと Owner の所持金を確認することができます．
 
 ```js
 const ownerBalance = await hardhatToken.balanceOf(owner.address);
 ```
-
-コントラクトオブジェクト hardhatToken に対して totalSupply というメソッドを使ってトークンの総量を求めます．
-
-ここではさらに，その値が Ownerの所持金と等しいことをテストします．
+* コントラクトオブジェクト hardhatToken に対して totalSupply というメソッドを使ってトークンの総量を求めます．
+* ここではさらに，その値が Ownerの所持金と等しいことをテストします．
 
 ```js
 expect(await hardhatToken.totalSupply()).to.equal(ownerBalance);
 ```
 
-テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテスト用のアカウントなどが利用できるようになります．
+#### テストの修正
 
+* テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテスト用のアカウントなどが利用できるようになります．
 * [Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)  を利用します
-
 
 ```bash
 nano test/Token.js
@@ -439,7 +582,10 @@ describe("トークンのコントラクト", function () {
 
 ```
 
-テストの実行
+* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
+* キーボード：`<ctrl x>` で nano エディタ終了
+
+#### テストの再実行
 
 ```bash
 npx hardhat test 
@@ -455,15 +601,42 @@ npx hardhat test
 ```
 
 
-## <a id="hhNetwork"> Hardhar Networkへのデプロイ</a>
-
-
-### Hardhat Network の利用
+## <a id="hhNetwork"> Hardhar Networkの起動</a>
 
 * ここから新しく別のターミナルを開く
 * プロジェクトルートに移動する
 
-hardhat node の起動
+```bash
+cd ~
+cd hardhat/tutorial
+```
+
+### hardhat設定ファイル hardhat.config.js の修正
+
+```bash
+nano hardhat.config.js
+```
+
+```js
+// hardhat.config.js
+require("@nomicfoundation/hardhat-toolbox");
+
+/** @type import('hardhat/config').HardhatUserConfig */
+module.exports = {
+  solidity: "0.8.27",
+  networks: {
+    hardhat: {
+      chainId: 31337,
+    },
+  },
+};
+
+```
+### hardhat node の起動
+
+* 自分のマシンのローカル環境にテスト用の Ethereum Network Node を起動します
+* 自動的に20個のアカウント（EOA) が生成されます
+* 自動生成されたアカウントはそれぞれ 10000 Eth の資金を所有しています
 
 ```bash
 npx hardhat node
@@ -490,27 +663,8 @@ Any funds sent to them on Mainnet or any other live network WILL BE LOST.
 
 ```
 
-### hardhat設定ファイル hardhat.config.js の修正
+* 各アカウントのアドレスと秘密鍵を確認してください
 
-```bash
-nano hardhat.config.js
-```
-
-```js
-// hardhat.config.js
-require("@nomicfoundation/hardhat-toolbox");
-
-/** @type import('hardhat/config').HardhatUserConfig */
-module.exports = {
-  solidity: "0.8.27",
-  networks: {
-    hardhat: {
-      chainId: 31337,
-    },
-  },
-};
-
-```
 
 ### メタマスクの利用
 
@@ -533,15 +687,42 @@ module.exports = {
 
 で「保存」をクリックしてネットワークに接続します
 
-### hardhat でコントラクトをデプロイする場合
+### メタマスクにアカウントを取り込む
+
+* <img src="images/metamask3.png" width="300">
+
+* <img src="images/metamask4.png" width="300">
+
+* <img src="images/metamask5.png" width="300">
+
+Hardhat node の起動画面のアカウントのリストにある
+
+* Private Key: 秘密鍵
+
+のどれかを秘密鍵としてコピーしてペーストします
+
+* <img src="images/metamask6.png" width="400">
+
+
+
+## hardhat Node にコントラクトをデプロイする
+
+
+### scripts フォルダとデプロイスクリプトの作成
 
 * プロジェクトルートの下の scripts フォルダにデプロイスクリプトを生成
-* デプロイスクリプトファイルを作成する (deploy.js)
 
 ```bash
 mkdir scripts
+```
+
+* デプロイスクリプトファイルを作成する (deploy.js)
+
+```bash
 nano scripts/deploy.js
 ```
+
+* deploy.js
 
 ```js
 const hre = require("hardhat");
